Bug 332314: Menu items are improperly aligned when using iconic menuitems, patch by Kai Liu <kliumozilla.kailiu.com>, r=me, r=zeniko, r=roc, a=damon
UltraBlame original commit: a3274d6273d402b1ef52da08f15f5befad9da59f

--- a/toolkit/themes/winstripe/global/menu.css
+++ b/toolkit/themes/winstripe/global/menu.css
@@ -789,7 +789,7 @@ start
 :
 1
 .
-28em
+45em
 !
 important
 ;
@@ -818,15 +818,23 @@ weight
 :
 inherit
 ;
-padding
 -
-left
+moz
+-
+margin
+-
+start
 :
 2px
+!
+important
 ;
+-
+moz
+-
 padding
 -
-right
+end
 :
 2px
 ;
@@ -917,7 +925,7 @@ width
 :
 1
 .
-28em
+45em
 ;
 min
 -
@@ -969,21 +977,60 @@ iconic
 -
 left
 {
+-
+moz
+-
+appearance
+:
+menuimage
+;
+}
+menu
+.
+menu
+-
+iconic
+>
+.
+menu
+-
+iconic
+-
+left
+>
+.
+menu
+-
+iconic
+-
+icon
+menuitem
+.
+menuitem
+-
+iconic
+>
+.
+menu
+-
+iconic
+-
+left
+>
+.
+menu
+-
+iconic
+-
+icon
+{
 /
 *
-there
-'
-s
-only
-space
-for
-15px
+reduce
+icon
 -
-make
-room
-for
-one
-more
+text
+crowding
 *
 /
 -
@@ -999,9 +1046,11 @@ start
 -
 moz
 -
-appearance
+margin
+-
+end
 :
-menuimage
+1px
 ;
 }
 /
